<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings_item"
        android:orderInCategory="100"
        android:title="@string/settings_icon"
        app:showAsAction="never" />  <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/search"
        android:orderInCategory="10"
        android:title="@string/search_icon"
        app:showAsAction="always|collapseActionView"
        /><!--app:actionViewClass="android.widget.SearchView"-->

    <item
        android:id="@+id/share_item"
        android:icon="@drawable/share"
        android:orderInCategory="20"
        android:title="@string/share_icon"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/delete_item"
        android:icon="@drawable/trash"
        android:orderInCategory="30"
        android:title="@string/delete_icon"
        app:showAsAction="always|collapseActionView" />

</menu>